# test-task

./: .gitignore  README.md  database.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f08acf975686_.py
app/api/auth/: router.py  schemas.py  utils.py
app/api/user/: router.py  schemas.py
app/certs/: jwt-private.pem  jwt-public.pem
app/core/: config.py
app/db/: database.py  models.py  utils.py
